# EmailSnap

./: .gitignore  NW_Smart_Notifier_기획서_기술정의서.docx  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: CategoryFilter.tsx  LoginView.tsx  MailItem.tsx  MailList.tsx  ProjectList.tsx  ProjectMailList.tsx  Settings.tsx  Toast.tsx
src/services/: ai.ts  classifier.ts  db.ts  matcher.ts  notification.ts  poller.ts
src/stores/: mailStore.ts  projectStore.ts  settingsStore.ts  uiStore.ts
src/types/: index.ts
